fix: z-index in task block

--- a/source/style/components/_main.scss
+++ b/source/style/components/_main.scss
@@ -206,6 +206,8 @@
         align-items: center;
         width: 100%;
         height: 428px;
+
+        overflow: hidden;
     }
 
     &__user {
@@ -291,7 +293,6 @@
     @include flex-direction (column);
     @include block-decor (100%, 245px, #FFFFFF, 0px 2px 7px 3px #9C9C9C);
 
-    z-index: 1;
     padding-right: 3%;
     padding-left: 5%;
     margin-bottom: 4%;
