--- a/source/style/main.css
+++ b/source/style/main.css
@@ -1282,6 +1282,7 @@ template {
           align-items: center;
   width: 100%;
   height: 428px;
+  overflow: hidden;
 }
 
 .customers-feed__user {
@@ -1393,7 +1394,6 @@ template {
   background-color: #FFFFFF;
   -webkit-box-shadow: 0px 2px 7px 3px #9C9C9C;
           box-shadow: 0px 2px 7px 3px #9C9C9C;
-  z-index: 1;
   padding-right: 3%;
   padding-left: 5%;
   margin-bottom: 4%;
